<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#673ab7"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dovelaqm.advertiseme.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_description"
        android:layout_marginTop="22dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/label_description" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_title"
        android:id="@+id/label_title"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/label_description"
        android:layout_alignLeft="@+id/label_price"
        android:layout_alignStart="@+id/label_price" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_name"
        android:id="@+id/label_name"
        android:layout_below="@+id/label_title"
        android:layout_alignRight="@+id/label_description"
        android:layout_alignEnd="@+id/label_description"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_text"
        android:id="@+id/label_text"
        android:layout_below="@+id/label_name"
        android:layout_alignRight="@+id/label_name"
        android:layout_alignEnd="@+id/label_name"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_phone"
        android:id="@+id/label_phone"
        android:layout_centerVertical="true"
        android:layout_below="@+id/label_text"
        android:layout_alignRight="@+id/label_text"
        android:layout_alignEnd="@+id/label_text"
        android:layout_marginTop="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_price"
        android:id="@+id/label_price"
        android:layout_below="@+id/label_phone"
        android:layout_alignRight="@+id/label_phone"
        android:layout_alignEnd="@+id/label_phone"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView_title"
        android:layout_above="@+id/label_name"
        android:layout_toRightOf="@+id/label_title"
        android:layout_marginLeft="53dp"
        android:layout_marginStart="53dp"
        android:editable="true" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_title2"
        android:editable="true"
        android:layout_above="@+id/label_name"
        android:layout_toRightOf="@+id/textView_title"
        android:layout_toEndOf="@+id/textView_title"
        />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_name2"
        android:editable="true"
        android:layout_alignBottom="@+id/label_name"
        android:layout_alignLeft="@+id/textView_title"
        android:layout_alignStart="@+id/textView_title" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_text2"
        android:editable="true"
        android:layout_alignBottom="@+id/label_text"
        android:layout_toRightOf="@+id/textView_title"
        android:layout_toEndOf="@+id/textView_title" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_phone2"
        android:editable="true"
        android:layout_alignBottom="@+id/label_phone"
        android:layout_toRightOf="@+id/textView_title"
        android:layout_toEndOf="@+id/textView_title" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText_price2"
        android:editable="true"
        android:layout_alignBottom="@+id/label_price"
        android:layout_toRightOf="@+id/textView_title"
        android:layout_toEndOf="@+id/textView_title" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_button_callMe"
        android:id="@+id/btn_callMe"
        android:layout_below="@+id/editText_price2"
        android:layout_alignRight="@+id/editText_price2"
        android:layout_alignEnd="@+id/editText_price2"
        android:layout_marginTop="79dp"
        android:onClick="callMe" />
</RelativeLayout>
